# NotiGram

./: .gitignore  .golangci.yml  .pylintrc  Dockerfile  LICENSE  README.md  go.mod  go.sum  main.go  pyproject.toml  requirements.txt
.github/workflows/: dockerhub.yml  golangci-lint.yml  hadolint.yml  lint.yml
app/: __init__.py  actions.py  bot.py  config.py  handlers.py  keyboards.py  strings.py
cmd/NotiGram/: main.go
internal/api/: api.go  routes.go  schemas.go
internal/bot/: bot.go  consumer.go  handlers.go
internal/config/: config.go
internal/logger/: logger.go
internal/storage/: operations.go  redis.go  subscriptions.go
internal/strings/: strings.go
notigram/: __init__.py  actions.py  bot.py  config.py  handlers.py  keyboards.py
