[tool.poetry]
name = "notigram"
version = "1.2.0"
description = "Send notifications from your apps to users in Telegram "
authors = ["Yarosvet"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^3.13.0"
fastapi = "^0.115.0"
redis = "^5.0.8"
uvicorn = "^0.30.6"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
# Set the maximum line length to 79.
line-length = 120
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]


[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
extend-select = [
    "F",
    "E",
    "W",
    "UP",
    "N",
    "D",
    "I",
    "PL",
    "S",
    "A",
    "FBT",
    "B",
    "ASYNC"
]
ignore=[
    "D211",
    "D213",
    "D401",
    "D203"
]